rrr (0.9) unstable; urgency=medium

  * Improve python module, is now fairly usable. Must fix import paths.

 -- atle <atle@goliathdns.no>  Thu, 18 Jul 2019 02:47:46 +0200

rrr (0.8) unstable; urgency=medium

  * Improve buffer performance
  * Add duplicator module

 -- Atle Solbakken <atle@goliathdns.no>  Sat, 13 Jul 2019 01:24:22 +0200

rrr (0.7) unstable; urgency=medium

  * Remove textual representation of messages sent over network
  * Convert all messages on network to BE (network order) and auto-convert
    back
  * Test MySQL and IP functions in test suite
  * Minor bugfixes

 -- Atle Solbakken <atle@goliathdns.no>  Fri, 05 Jul 2019 20:14:19 +0200

rrr (0.6) unstable; urgency=medium

  * Package dependency fixes
  * Support configuration file to set up modules
  * Multiple instances of each module possible
  * Rewrite of some global data structures
  * Create test suite for building

 -- Atle Solbakken <atle@goliathdns.no>  Wed, 03 Jul 2019 21:29:51 +0200

rrr (0.5) unstable; urgency=medium

  * Add python module

 -- Atle Solbakken <atle@goliathdns.no>  Mon, 17 Jun 2019 17:13:45 +0200

rrr (0.4) unstable; urgency=medium

  * Change project name to Read Route Record (triple R)

 -- Atle Solbakken <atle@goliathdns.no>  Fri, 24 May 2019 13:21:42 +0200

voltage-logger (0.3) unstable; urgency=medium

  * Bump version, see git log for details

 -- Atle Solbakken <atle@goliathdns.no>  Wed, 21 Mar 2018 22:54:54 +0100

voltage-logger (0.2) unstable; urgency=medium

  * Initial version

 -- Atle Solbakken <atle@goliathdns.no>  Fri, 02 Mar 2018 14:40:11 +0100