@@ -2,7 +2,8 @@ Source: rrr
 Section: main
 Priority: optional
 Maintainer: Atle Solbakken <atle@goliathdns.no>
-Build-Depends: debhelper (>= 9), dh-autoreconf, build-essential, libusb-dev, libblock-device-logger-dev, libmysqlclient-dev | libmariadbclient-dev-compat, libssl-dev, python3-dev (>= 3.3)
+Build-Depends: debhelper (>= 9), dh-autoreconf, dh-python, build-essential, libusb-dev, libblock-device-logger-dev, libmysqlclient-dev | libmariadbclient-dev-compat, libssl-dev, python3-dev (>= 3.3)
+X-Python3-Version: 3.6,3.7
 Standards-Version: 3.9.8
 Homepage: https://github.com/atlesn/rrr
 
